fix scrollbar showing on hover of last calendar, and clickable area of actions

--- a/css/calendarlist.css
+++ b/css/calendarlist.css
@@ -172,7 +172,7 @@
 	line-height: 44px;
 	height: 16px;
 	width: 16px;
-	padding: 14px 2px 14px 2px;
+	padding: 12px 6px 12px 6px;
 	cursor: pointer;
 }
 
